--- a/public/bio.html
+++ b/public/bio.html
@@ -25,9 +25,9 @@
       
 <main id="content">
         <section>
-          <h1>welcome</h1>
+          <h1>intro</h1>
           <p>
-            this website is very much a work-in-progress. what am i going to use it for? who could say. 
+            hello i am jay and here is my neocities. i am a gamer girl, i use she/her & he/him pronouns, and i love dorothea arnault. i do not remember how to use html and i am never open to feedback. 
           </p>
         </section>
       </main>
