--- a/public/bio.html
+++ b/public/bio.html
@@ -25,10 +25,28 @@
       
 <main id="content">
         <section>
-          <h1>intro</h1>
+          <h1>bio</h1>
           <p>
-            hello i am jay and here is my neocities. i am a gamer girl, i use she/her & he/him pronouns, and i love dorothea arnault. i do not remember how to use html and i am never open to feedback. 
+            hello i am jay and here is my neocities. i am a gamer girl, i use she/her & he/him pronouns, and i love dorothea arnault. i only sort of remember how to use html and i am never open to feedback. 
           </p>
+          <p class="divider"><a href="http://jasminnie.weebly.com" target="_blank"><img src="./images/div2.gif"></a></p>
+          <p>i don't really know what to say here. idk how much to share about myself. BUT i know that this place will become a dumping ground for all my thoughts on the things i hold dear, so i guess i can start by listing those out.</p>
+          <h4>jay's interests:</h4>
+          <ul>
+            <li>
+              the girls of loona
+              <ul>
+                <li>artms</li>
+                <li>loossemble</li>
+                <li>yves</li>
+                <li>chuu</li>
+              </ul>
+            </li>
+            <li>seventeen</li>
+            <li>ace attorney</li>
+            <li>fire emblem: three houses</li>
+            <li>neopets</li>
+          </ul>
         </section>
       </main>
 
