bio page complete!

--- a/public/bio.html
+++ b/public/bio.html
@@ -26,28 +26,60 @@
 <main id="content">
         <section>
           <h1>bio</h1>
+          
+          <div class="imgwrapright">
+            <figure>
+              <a href="https://picrew.me/en/image_maker/1469769" target="_blank"><img src="./images/picrew.png" height="200px"></a><br>
+              <figcaption>
+                <table class="caption">
+                  <tr>
+                    <td>age</td>
+                    <td>25+</td>
+                  </tr>
+                  <tr>
+                    <td>pronouns</td>
+                    <td>she/her, he/him</td>
+                  </tr>
+                  <tr>
+                    <td>location</td>
+                    <td>chicago</td>
+                  </tr>
+                </table>
+              </figcaption>
+            </figure>
+          </div>
           <p>
-            hello i am jay and here is my neocities. i am a gamer girl, i use she/her & he/him pronouns, and i love dorothea arnault. i only sort of remember how to use html and i am never open to feedback. 
+            hello i am jay and here is my neocities. i am a gamer girl (skill level near zero), far too prone to getting on a soapbox, and an advocate for everyday magic and whimsy. i love cute things, hot takes, and dorothea arnault. i only sort of remember how to use html and i am never open to feedback.
+            you can find me <u>@arnaulting</u> on most forms of social media.  
           </p>
           <p class="divider"><a href="http://jasminnie.weebly.com" target="_blank"><img src="./images/div2.gif"></a></p>
-          <p>i don't really know what to say here. idk how much to share about myself. BUT i know that this place will become a dumping ground for all my thoughts on the things i hold dear, so i guess i can start by listing those out.</p>
-          <h4>jay's interests:</h4>
-          <ul>
-            <li>
-              <a href="https://midsummerjay.neocities.org/shrines/loona.html">the girls of loona</a>
-              <ul>
-                <li>artms</li>
-                <li>loossemble</li>
-                <li>yves</li>
-                <li>chuu</li>
-              </ul>
-            </li>
-            <li>seventeen</li>
-            <li>ace attorney</li>
-            <li>fire emblem: three houses</li>
-            <li>neopets</li>
-            <li>journaling & stationery</li>
-          </ul>
+          <h4 style="margin-top:0px">jay's current interests:</h4>
+          <table style="vertical-align:top;max-width:100%;">
+            <tr>
+              <td>
+                <ul>
+                  <li>
+                    <a href="https://midsummerjay.neocities.org/shrines/loona.html">the girls of loona</a>
+                    <ul>
+                      <li>artms</li>
+                      <li>loossemble</li>
+                      <li>yves</li>
+                      <li>chuu</li>
+                    </ul>
+                  </li>
+                </ul>
+              </td>
+              <td>
+                <ul>
+                  <li>seventeen</li>
+                  <li>ace attorney</li>
+                  <li>fire emblem: three houses</li>
+                  <li>neopets</li>
+                  <li>journaling & stationery</li>
+                </ul>
+              </td>
+            </tr>
+          </table>
         </section>
       </main>
 
