--- a/public/bio.html
+++ b/public/bio.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>jay's spot - about</title>
-	<meta name="description" content="a midsummer jay's zone - about" />
+    <title>a midsummer jay's zone - bio</title>
+	<meta name="description" content="a midsummer jay's zone - bio" />
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
