--- a/public/bio.html
+++ b/public/bio.html
@@ -67,11 +67,12 @@
                       <li>chuu</li>
                     </ul>
                   </li>
+                  <li>seventeen</li>
                 </ul>
               </td>
               <td>
                 <ul>
-                  <li>seventeen</li>
+                  <li><a href="https://midsummerjay.neocities.org/shrines/p-o-k-accent-e-mon.html">pokémon</a></li>
                   <li>ace attorney</li>
                   <li>fire emblem: three houses</li>
                   <li>neopets</li>
